# machine-learning-study

./: .gitignore  HumidTemp.py  HumidTempComfort.csv  Untitled.ipynb  newton_test.ipynb  pyproject.toml
BayesianLearning/: BayesianNetwork.ipynb  GaussianProcessRegression.py  dirichlet.py
BayesianLearning/.ipynb_checkpoints/: Regression-checkpoint.ipynb
BayesianLearning/Regression/: LinearRegression.ipynb  SimpleMonteCarlo.ipynb
StyleGAN/: data_scraping.ipynb
img/: IMG_8927.heic  IMG_8928.heic
