[tool.poetry]
name = "machine-learning-study"
version = "0.1.0"
description = "Write Python codes to study machine learning."
authors = ["Ryo Omae <matcikun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
scikit-learn = "^0.23.1"
jupyterlab = "^2.1.5"
matplotlib = "^3.2.2"
tqdm = "^4.47.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
